@@ -18,7 +18,7 @@ java -jar ./ilitools/ilivalidator-1.15.1-INTERNAL-GEOWERKSTATT-SNAPSHOT.jar --me
 ***Mit Fehlern aus den Zusatzprüfungen***
 
 ```jar
-java -jar ./ilitools/ilivalidator-1.15.1-INTERNAL-GEOWERKSTATT-SNAPSHOT.jar --metaConfig c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\repositories\dmav_V1_1\DMAV_V1_1_Validierung_MetaConfig_with_additional_rules.ini --refmapping C:/Data/03_GIT_Repos/DMAV_ilivalidator/DMAV_ilivalidator/repositories/refdata_mapping.xtf --log c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\data\dmav_V1_1\test_data\logs\DMAVTYM_Alles_V1_1.log --scope 449 --modeldir c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\repositories c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\data\dmav_V1_1\test_data\DMAVTYM_Alles_V1_1_withError.xtf
+java --enable-native-access=ALL-UNNAMED -jar ./ilitools/ilivalidator-1.15.1-INTERNAL-GEOWERKSTATT-SNAPSHOT.jar --metaConfig c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\repositories\dmav_V1_1\DMAV_V1_1_Validierung_MetaConfig_with_additional_rules.ini --refmapping C:/Data/03_GIT_Repos/DMAV_ilivalidator/DMAV_ilivalidator/repositories/refdata_mapping.xtf --log c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\data\dmav_V1_1\test_data\logs\DMAVTYM_Alles_V1_1.log --scope 449 --modeldir c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\repositories c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\data\dmav_V1_1\test_data\DMAVTYM_Alles_V1_1_withError.xtf
 ```
 Es kommen folgende Fehler:
 
@@ -32,5 +32,5 @@ Es kommen folgende Fehler:
 
 ***Ohne Fehler aus Zusatzprüfungen***
 ```jar
-java -jar ./ilitools/ilivalidator-1.15.1-INTERNAL-GEOWERKSTATT-SNAPSHOT.jar --metaConfig c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\repositories\dmav_V1_1\DMAV_V1_1_Validierung_MetaConfig_with_additional_rules.ini --refmapping C:/Data/03_GIT_Repos/DMAV_ilivalidator/DMAV_ilivalidator/repositories/refdata_mapping.xtf --log c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\data\dmav_V1_1\test_data\logs\DMAVTYM_Alles_V1_1.log --scope 449 --modeldir c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\repositories c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\data\dmav_V1_1\test_data\DMAVTYM_Alles_V1_1_noError.xtf
+java --enable-native-access=ALL-UNNAMED -jar ./ilitools/ilivalidator-1.15.1-INTERNAL-GEOWERKSTATT-SNAPSHOT.jar --metaConfig c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\repositories\dmav_V1_1\DMAV_V1_1_Validierung_MetaConfig_with_additional_rules.ini --refmapping C:/Data/03_GIT_Repos/DMAV_ilivalidator/DMAV_ilivalidator/repositories/refdata_mapping.xtf --log c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\data\dmav_V1_1\test_data\logs\DMAVTYM_Alles_V1_1.log --scope 449 --modeldir c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\repositories c:\Data\03_GIT_Repos\DMAV_ilivalidator\DMAV_ilivalidator\data\dmav_V1_1\test_data\DMAVTYM_Alles_V1_1_noError.xtf
 ```
